name:           towards-acasrlc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/maciej-bendkowski/towards-acasrlc#readme>
homepage:       https://github.com/maciej-bendkowski/towards-acasrlc#readme
bug-reports:    https://github.com/maciej-bendkowski/towards-acasrlc/issues
author:         Maciej Bendkowski
maintainer:     maciej.bendkowski@tcs.uj.edu.pl
copyright:      2018 Maciej Bendkowski
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/maciej-bendkowski/towards-acasrlc

library
  exposed-modules:   Grammar
                   , Mathematica
  hs-source-dirs:  src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable towards-acasrlc
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -O2
  build-depends:
      base >=4.7 && <5
    , towards-acasrlc
  default-language: Haskell2010
